Add recurring jobs screenshot

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ title: HangFire – Background job processing for ASP.NET
                         <li data-target="#screenshots" data-slide-to="3"></li>
                         <li data-target="#screenshots" data-slide-to="4"></li>
                         <li data-target="#screenshots" data-slide-to="5"></li>
+                        <li data-target="#screenshots" data-slide-to="6"></li>
                     </ol>
 
                     <!-- Wrapper for slides -->
@@ -73,6 +74,11 @@ title: HangFire – Background job processing for ASP.NET
                                 <img src="/img/failed-jobs-sm.png" alt="HangFire Failed Job List">
                             </a>
                         </div>
+                        <div class="item">
+                            <a href="/img/recurring-jobs.png">
+                                <img src="/img/recurring-jobs-sm.png" alt="HangFire Recurring Jobs">
+                            </a>
+                        </div>          
                         <div class="item">
                             <a href="/img/queues.png">
                                 <img src="/img/queues-sm.png" alt="HangFire Queue List">
