Add link to logging guide

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ server.Start();</pre>
                     Watch the <a href="http://hangfire.io/img/dashboard.png" target="_blank">statistics</a>, know the <a href="http://hangfire.io/img/failed-job.png" target="_blank">detailed history</a> of job processing, manually <a href="http://hangfire.io/img/failed-jobs.png" target="_blank">retry or delete</a> any job from the integrated web monitoring UI.
                 </p>
                 <p>
-                    Plug in your logging framework to get notifications about problems in background job processing.
+                    <a href="http://docs.hangfire.io/en/latest/users-guide/adding-logging.html" target="_blank">Plug in</a> your logging framework to get notifications about problems in background job processing.
                 </p>
             </div>
         </div>
