--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@ title: HangFire – Background job processing for ASP.NET
         <div class="row">
             <div class="col-md-7">
                 <h1>HangFire</h1>
-                <p>A reliable way to process fire-and-forget, delayed and recurring tasks inside ASP.NET application, backed by Redis, SQL Server, SQL Azure or MSMQ.</p>
+                <p>
+                    Incredibly easy way to process fire-and-forget, delayed and recurring tasks inside ASP.NET applications. No Windows Service required.
+                </p>
+                <p>
+                    Backed by Redis, SQL Server, SQL Azure or MSMQ.
+                </p>
                 <p style="font-size: inherit;">
 
 <span class="fb-share-button" data-href="http://hangfire.io" data-type="button_count"></span>
