Update slogan, part 2

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: HangFire – Background job processing for ASP.NET
             <div class="col-md-7">
                 <h1>HangFire</h1>
                 <p>
-                    Incredibly easy way to process fire-and-forget, delayed and recurring tasks inside ASP.NET applications. No Windows Service required.
+                    Incredibly easy way to perform fire-and-forget, delayed and recurring tasks inside ASP.NET applications. No Windows Service required.
                 </p>
                 <p>
                     Backed by Redis, SQL Server, SQL Azure or MSMQ.
