Lightbox gallery for screenshots

--- a/index.html
+++ b/index.html
@@ -55,37 +55,37 @@ title: HangFire – Background job processing for ASP.NET
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <a href="/img/dashboard.png">
+                            <a href="/img/dashboard.png" data-lightbox="Screenshots" data-title="Dashboard">
                                 <img src="/img/dashboard-sm.png" alt="HangFire Dashboard">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="/img/succeeded-job.png">
+                            <a href="/img/succeeded-job.png" data-lightbox="Screenshots" data-title="Succeeded Job">
                                 <img src="/img/succeeded-job-sm.png" alt="HangFire Succeeded Job">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="/img/failed-job.png">
+                            <a href="/img/failed-job.png" data-lightbox="Screenshots" data-title="Failed Job">
                                 <img src="/img/failed-job-sm.png" alt="HangFire Failed Job">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="/img/succeeded-jobs.png">
+                            <a href="/img/succeeded-jobs.png" data-lightbox="Screenshots" data-title="Succeeded Job List">
                                 <img src="/img/succeeded-jobs-sm.png" alt="HangFire Succeeded Job List">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="/img/failed-jobs.png">
+                            <a href="/img/failed-jobs.png" data-lightbox="Screenshots" data-title="Failed Job List">
                                 <img src="/img/failed-jobs-sm.png" alt="HangFire Failed Job List">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="/img/recurring-jobs.png">
+                            <a href="/img/recurring-jobs.png" data-lightbox="Screenshots" data-title="Recurring Jobs">
                                 <img src="/img/recurring-jobs-sm.png" alt="HangFire Recurring Jobs">
                             </a>
                         </div>          
                         <div class="item">
-                            <a href="/img/queues.png">
+                            <a href="/img/queues.png" data-lightbox="Screenshots" title="Queues">
                                 <img src="/img/queues-sm.png" alt="HangFire Queue List">
                             </a>
                         </div>                        
