--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ title: HangFire – Background job processing for ASP.NET
                     <a href="https://twitter.com/share" class="twitter-share-button" data-via="hangfire_net">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
+                    <a style="vertical-align: super;" href="http://www.reddit.com/submit" onclick="window.location = 'http://www.reddit.com/submit?url=' + encodeURIComponent(window.location); return false"> <img style="vertical-align: text-top;" src="http://www.reddit.com/static/spreddit7.gif" alt="submit to reddit" border="0" /> </a>
+
                 </p>
             </div>
             <div class="col-md-5">
