Fix github button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Hangfire – Background job processing for ASP.NET
 <!-- Поместите этот тег туда, где должна отображаться кнопка +1. -->
 <span class="g-plusone" data-size="medium"></span>
 
-                    <iframe src="http://ghbtns.com/github-btn.html?user=odinserj&repo=HangFire&type=watch&count=true"
+                    <iframe src="http://ghbtns.com/github-btn.html?user=HangfireIO&repo=Hangfire&type=watch&count=true"
   allowtransparency="true" frameborder="0" scrolling="0" width="89" height="20"></iframe>
 
 <!-- Поместите этот тег за последним тегом виджета кнопка +1. -->
