--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hangfire – Background job processing for ASP.NET
+title: Hangfire – Fire-and-Forget for ASP.NET
 ---
 
 <!-- Main jumbotron for a primary marketing message or call to action -->
