Brand link is now optional

--- a/pro/index.html
+++ b/pro/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Hangfire Pro – Background job processing for ASP.NET
+display_brand: true
 ---
 
 <div class="jumbotron" style="padding-top: 0px; padding-bottom: 10px;">
