Add NuGet badge

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ title: Hangfire – Fire-and-Forget for ASP.NET
                     Backed by Redis, SQL Server, SQL Azure, MSMQ, RabbitMQ.
                 </p>
                 <p style="font-size: inherit;">
+<img style="display: inline-block;vertical-align: inherit;margin-right:5px;" src="http://img.shields.io/nuget/dt/Hangfire.svg?style=flat">
 
 <span class="fb-share-button" data-href="http://hangfire.io" data-type="button_count"></span>
 
