--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Hangfire – Fire-and-Forget for ASP.NET
 ---
 
 <!-- Main jumbotron for a primary marketing message or call to action -->
-<div class="jumbotron">
+<div class="jumbotron underlined">
     <div class="container">
         <div class="row">
             <div class="col-md-7">
