--- a/pricing.html
+++ b/pricing.html
@@ -9,9 +9,11 @@ active: pricing
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h1 class="page-header">Simple and transparent pricing</h1>
+            <h1 class="page-header text-center">
+                Hangfire is free even for commercial use!
+            </h1>
             <p class="lead">
-                Prices below are <strong>per organization</strong> with no royalties or hidden fees. We provide <strong>30 day</strong> unconditional money back guarantee.
+                Prices below are <strong>per organization</strong> with no royalties, no hidden fees and no psychological pricing. We provide <strong>30 day</strong> unconditional money back guarantee.
             </p>
         </div>
     </div>
@@ -34,7 +36,7 @@ active: pricing
                         <h3>Free</h3>
                         <h4>Forever</h4>
                     </div>
-                    <button class="btn btn-default">Download</button>
+                    <a class="btn btn-default" href="/core/download.html">Download</a>
                 </div>
             </div>
         </div>
@@ -53,10 +55,10 @@ active: pricing
                         <li class="plan-item-spacer"></li>
                     </ul>
                     <div class="plan-price">
-                        <h3><span class="symbol">$</span>499</h3>
+                        <h3><span class="symbol">$</span>500</h3>
                         <h4>per year</h4>
                     </div>
-                    <button class="btn btn-success">Buy Now</button>
+                    <a class="btn btn-success" href="https://sites.fastspring.com/hangfire/instant/hf-business" target="_top">Buy Now</a>
                 </div>
             </div>
         </div>
@@ -75,12 +77,47 @@ active: pricing
                         <li>One Business Day SLA</li>
                     </ul>
                     <div class="plan-price">
-                        <h3><span class="symbol">$</span>999</h3>
+                        <h3><span class="symbol">$</span>5000</h3>
                         <h4>per year</h4>
                     </div>
-                    <button class="btn btn-warning">Buy Now</button>
+                    <a class="btn btn-warning" href="https://sites.fastspring.com/hangfire/instant/hf-enterprise" target="_top">Buy Now</a>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="row">
+        <h2>Frequently asked questions</h2>
+
+<h3>
+<a name="user-content-is-there-a-trial-version" class="anchor" href="#is-there-a-trial-version" aria-hidden="true"><span class="octicon octicon-link"></span></a>Is there a trial version?</h3>
+
+<p>There's no free trial but I do offer a 14 day period with full refund if Pro does not work for you.</p>
+
+<h3>
+<a name="user-content-what-happens-if-my-subscription-lapses" class="anchor" href="#what-happens-if-my-subscription-lapses" aria-hidden="true"><span class="octicon octicon-link"></span></a>What happens if my subscription lapses?</h3>
+
+<p>You lose access to the gem server and priority support.  You won't get any more updates or bug fixes and 'bundle install' won't work anymore.  You retain the right to run the version you have.</p>
+
+<h3>
+<a name="user-content-can-you-transfer-a-license" class="anchor" href="#can-you-transfer-a-license" aria-hidden="true"><span class="octicon octicon-link"></span></a>Can you transfer a license?</h3>
+
+<p>Licenses are <strong>not</strong> transferrable to another company.  I will transfer the license from a user-specific email to a group email address (e.g. john_smith@example.com &rarr; tech@example.com) but only for <strong>the same domain</strong>.  It is strongly recommended that you buy the license using a group email address so the license is not attached to any one employee's email address.</p>
+
+<h3>
+<a name="user-content-how-many-licenses-do-i-need-to-buy" class="anchor" href="#how-many-licenses-do-i-need-to-buy" aria-hidden="true"><span class="octicon octicon-link"></span></a>How many licenses do I need to buy?</h3>
+
+<p>Every organization that runs Hangfire Pro for their own benefit must purchase a license.</p>
+
+<h3>
+<a name="user-content-what-is-the-buying-process" class="anchor" href="#what-is-the-buying-process" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is the buying process?</h3>
+
+<p>Click the <em>Buy Now</em> button and put in your info.  Your license will be associated with the email address you use.  I'll generate your download URL and email it to you within 24 hours.</p>
+
+<p>You'll receive a confirmation email upon purchase which can be used as an invoice/receipt.</p>
+
+<h3>
+<a name="user-content-can-i-get-a-refund" class="anchor" href="#can-i-get-a-refund" aria-hidden="true"><span class="octicon octicon-link"></span></a>Can I get a refund?</h3>
+
+<p>Yes, up to two weeks after purchase.  Let me know the reason and maybe I can help but either way it's not a problem.  Email <a href="mailto:support@hangfire.io">support@hangfire.io</a>.</p>
     </div>
 </div>
