--- a/pro-old/index.html
+++ b/pro-old/index.html
@@ -1,14 +1,14 @@
 ---
-layout: default-ru
-title: Hangfire Pro – обработка фоновых задач для ASP.NET
+layout: default
+title: Hangfire Pro – Background job processing for ASP.NET
 display_brand: true
 ---
 
-<div class="jumbotron jumbotron-small">
+<div class="jumbotron" style="padding-top: 0px; padding-bottom: 10px;">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>
+                <h1 style="margin: 0 0 20px 0;">
                     Hangfire Pro
                 </h1>
             </div>
@@ -19,11 +19,11 @@ display_brand: true
 <div class="container">
     <div class="row">
         <div class="col-md-8">
-            {% include pro/features-ru.html %}
-            {% include pro/faq-ru.html %}
+            {% include pro/features.html %}
+            {% include pro/faq.html %}
         </div>
         <div class="col-md-4">
-            {% include pro/buy-ru.html %}
+            {% include pro/buy.html %}
         </div>
     </div>
 </div>
