--- a/pro/index.html
+++ b/pro/index.html
@@ -1,29 +1,10 @@
 ---
-layout: default
-title: Hangfire Pro – Background job processing for ASP.NET
+layout: pro
+title: Overview – Hangfire Pro
 display_brand: true
+sub_active: overview
 ---
 
-<div class="jumbotron" style="padding-top: 0px; padding-bottom: 10px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1 style="margin: 0 0 20px 0;">
-                    Hangfire Pro
-                </h1>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="container">
-    <div class="row">
-        <div class="col-md-8">
-            {% include pro/features.html %}
-            {% include pro/faq.html %}
-        </div>
-        <div class="col-md-4">
-            {% include pro/buy.html %}
-        </div>
-    </div>
-</div>
+<p class="lead">
+    Hangfire Pro is an extension which adds a few nice features to Hangfire.  Hangfire is open source and free for all to use but unfortunately it takes a lot of my time to maintain and support.  Hangfire Pro is a way for you to purchase really useful functionality while also ensuring Hangfire will be supported for years to come.
+</p>
