--- a/products.html
+++ b/products.html
@@ -36,7 +36,7 @@ active: products
             </a>
         </div>
         <div class="col-md-4">
-            <a class="product" href="" style="visibility: hidden;">
+            <a class="product" href="/extensions/">
                 <div class="product-heading">
                     Hangfire Extensions
                 </div>
