--- a/purchase.html
+++ b/purchase.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Hangfire Pricing
+title: Purchase Hangfire
 display_brand: true
 nav_underlined: true
-active: pricing
+active: purchase
 ---
 
 <div class="container">
