--- a/subscriptions.html
+++ b/subscriptions.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Purchase Hangfire
+title: Hangfire Subscriptions
 display_brand: true
 nav_underlined: true
-active: purchase
+active: subscriptions
 ---
 
 <div class="container">
@@ -34,7 +34,7 @@ active: purchase
                     </ul>
                     <div class="plan-price">
                         <h3>Free</h3>
-                        <h4>Forever</h4>
+                        <h4>Always and Forever</h4>
                     </div>
                     <a class="btn btn-default" href="/core/download.html">Download</a>
                 </div>
